--- a/Gemma/Views/MemberCenter/Home.cshtml
+++ b/Gemma/Views/MemberCenter/Home.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<Gemma.Models.MemberCenter>
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Title = "会員登録";
@@ -9,14 +10,14 @@
     <div class="row-fluid ">
         <div>
             <div>
-                <h1 class="TopTitle">会員登録が完了しました</h1>
+                <h3 class="TopTitle">会員登録が完了しました</h3>
                 <div>
                     @*<span class="ty-success-registration__text">会員登録が完了しました。</span>*@
-                    <ul>
+                    <ul class="contenturl">
                         @foreach (var x in Model)
                         {
                             <li class="col-md-6 homeblock">
-                                <a style="text-decoration: none;" class="url " href="@x.NextUrl" rel="nofollow">@x.Item</a>
+                                <a style="text-decoration: none;" class="url" href="@x.NextUrl/@Html.Raw(User.Identity.GetUserId())" rel="nofollow">@x.Item</a>
                                 <span class="url_buttom">@x.ItemDesciption</span>
                             </li>
                         }
@@ -38,7 +39,9 @@
             margin-bottom: 30px;
             padding-left: 17px;
         }
-
+        .contenturl{
+            margin-left: 100px;
+        }
         .url {
             color: #191919;
             text-decoration: none;
