--- a/Gemma/Views/Shared/_Header.cshtml
+++ b/Gemma/Views/Shared/_Header.cshtml
@@ -3,53 +3,84 @@
     ViewBag.Title = "_Header";
 }
 
-    <div class="container-fluid header">
-        <br />
-        <div class="row">
-            <div class="logo">
-                <a href="#"><img src="~/Assets/images/Icons/logo.png" /></a>
+<div class="container-fluid header">
+    <br />
+    <div class="row">
+        <div class="logo">
+            <a href="#"><img src="~/Assets/images/Icons/logo.png" /></a>
 
-            </div>
-            <div class="header-nav row">
-                <ul class=" nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">ONLINE STORE</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">COLLECTION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">JOURNAL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">SHOP</a>
-                    </li>
-                </ul>
-                <ul class="nav header-tool">
-                    <li class="account nav-item dropdown">
-
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <img src="~/Assets/images/Icons/User_Mark.png" />
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">新規会員登録</a>
-                            <a class="dropdown-item" href="#">LOGIN</a>
-
-                        </div>
-                    </li>
-                    <li class="bookmark">
-                        <a href="#"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
-                    </li>
-                    <li class="cart">
-                        <a href="#"><img src="~/Assets/images/Icons/Cart_Mark.png" /></a>
-                    </li>
-                </ul>
-            </div>
         </div>
-        <br />
+        <div class="header-nav row">
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">ONLINE STORE</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">COLLECTION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">JOURNAL</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">SHOP</a>
+                </li>
+            </ul>
+            <ul class="nav header-tool">
+                <li class="account nav-item dropdown">
+
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img src="~/Assets/images/Icons/User_Mark.png" />
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="#">新規会員登録</a>
+                        <a class="dropdown-item" href="#">LOGIN</a>
+
+                    </div>
+                </li>
+                <li class="bookmark">
+                    <a href="#"><img src="~/Assets/images/Icons/Heart_Mark.png" /></a>
+                </li>
+                <li class="cart">
+                    <a href="#"><img src="~/Assets/images/Icons/Cart_Mark.png" /></a>
+                </li>
+            </ul>
+        </div>
     </div>
+    <br />
+</div>
 <div class="PaddingTopCSS">
 
 </div>
 
+@section topCSS{
+    .fixed {
+    height: 70px !important;
+    animation-delay: 100ms;
+    }
+}
 
+@section endJS{
+    <script>
+        $(document).ready();
+
+        function sticky() {
+            if (window.pageYOffset > 50) {
+                document.querySelector("nav").classList.add("fixed");
+            }
+
+            if (window.pageYOffset < 50) {
+                document.querySelector("nav").classList.remove("fixed");
+            }
+        }
+
+        function sticky2() {
+            if (window.pageYOffset > 50) {
+                document.querySelector("img").classList.add("photofixed");
+            }
+
+            if (window.pageYOffset < 50) {
+                document.querySelector("img").classList.remove("photofixed");
+            }
+        }
+    </script>
+}
