--- a/Gemma/Views/Order/Index.cshtml
+++ b/Gemma/Views/Order/Index.cshtml
@@ -69,7 +69,7 @@
                 @Html.DisplayFor(modelItem => item.OrderDate)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Details", "Details", new { orderID=item.OrderID })
             </td>
         </tr>
     }
